k8s/prod/1.3/rollout/flask-k8s-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-k8s-vs
  namespace: ms-prod
spec:
  hosts:
  - flask-k8s
  http:
  - route:
    - destination:
        host: flask-k8s
        port:
            number: 8082
        subset: prod
      weight: 100
    - destination:
        host: flask-k8s
        port:
            number: 8082
        subset: canary
      weight: 0
